<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:gravity="center_horizontal"
              android:layout_gravity="center_horizontal"
              android:padding="0dp"
              android:id="@+id/v2"
        >
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:gravity="top"
        android:layout_gravity="center_horizontal"
        android:padding="0dp"
                 android:layout_height="fill_parent">
<!--        <TableRow android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:gravity="center_horizontal"
                  android:padding="0dp"
                  android:layout_weight="1">
            <TextView/>
        </TableRow>-->
        <TableRow android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:padding="0dp">
            <TextView style="@style/learn_table.header"
                      android:text="@string/header2"/>
        </TableRow>
        <TableRow android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:gravity="center"
                  android:padding="0dp">
            <com.oktogames.app_2x2is4.light.android.widget.TextViewExt
                    android:padding="0dp"
                    style="@style/learn_table"
                    android:text="@string/v2x1"/>
            <com.oktogames.app_2x2is4.light.android.widget.TextViewExt
                    android:padding="0dp"
                    style="@style/learn_table"
                    android:text="@string/v2x5"/>
            <com.oktogames.app_2x2is4.light.android.widget.TextViewExt
                    android:padding="0dp"
                    style="@style/learn_table"
                    android:text="@string/v2x9"/>
        </TableRow>
        <TableRow android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:gravity="center"
                  android:padding="0dp">
            <com.oktogames.app_2x2is4.light.android.widget.TextViewExt
                    style="@style/learn_table"
                    android:padding="0dp"
                    android:text="@string/v2x2"/>
            <com.oktogames.app_2x2is4.light.android.widget.TextViewExt
                    android:padding="0dp"
                    style="@style/learn_table"
                    android:text="@string/v2x6"/>
            <com.oktogames.app_2x2is4.light.android.widget.TextViewExt
                    android:padding="0dp"
                    style="@style/learn_table"
                    android:text="@string/v2x10"/>
        </TableRow>
        <TableRow android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:gravity="center"
                  android:padding="0dp">
            <com.oktogames.app_2x2is4.light.android.widget.TextViewExt
                    android:padding="0dp"
                    style="@style/learn_table"
                    android:text="@string/v2x3"/>
            <com.oktogames.app_2x2is4.light.android.widget.TextViewExt
                    android:padding="0dp"
                    style="@style/learn_table"
                    android:text="@string/v2x7"/>
            <com.oktogames.app_2x2is4.light.android.widget.TextViewExt
                    android:padding="0dp"
                    style="@style/learn_table"
                    android:text="@string/v2x11"/>
        </TableRow>
        <TableRow android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:gravity="center"
                  android:padding="0dp">
            <com.oktogames.app_2x2is4.light.android.widget.TextViewExt
                    android:padding="0dp"
                    style="@style/learn_table"
                    android:text="@string/v2x4"/>
            <com.oktogames.app_2x2is4.light.android.widget.TextViewExt
                    android:padding="0dp"
                    style="@style/learn_table"
                    android:text="@string/v2x8"/>
            <com.oktogames.app_2x2is4.light.android.widget.TextViewExt
                    android:padding="0dp"
                    style="@style/learn_table"
                    android:paddingBottom="2dp"
                    android:text="@string/v2x12"/>
        </TableRow>
        <!--<TableRow android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:gravity="center"
                  android:padding="0dp">

        </TableRow>-->
    </TableLayout>
</LinearLayout>